more refactor, filesystem/scribble